# BasicCalculator

./: .gitIgnore  README.md
BasicCalculator/: CMakeLists.txt  InputsLayout.qml  Main.qml  main.cpp
BasicCalculator/Engine/: engine.cpp  engine.h
BasicCalculator/GlobalProps/: globalprops.cpp  globalprops.h
